[package]

name          = "tmp_mio"
version       = "0.5.2"
license       = "MIT"
description   = "Temporary fork of the mio crate with windows bug fix"
documentation = "http://rustdoc.s3-website-us-east-1.amazonaws.com/mio/v0.5.x/mio/"
homepage      = "https://github.com/carllerche/mio"
repository    = "https://github.com/ustulation/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
log    = "0.3.1"
nix    = "0.5.0"
libc   = "0.2.4"
slab   = "0.1.0"
time   = "0.1.33"
bytes  = "0.3.0"
winapi = "0.2.1"
miow   = "0.1.1"
net2   = { version = "0.2.19", default-features = false }

[dev-dependencies]
env_logger = "0.3.0"
tempdir    = "0.3.4"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "tcp"
path = "test/tcp.rs"

[[test]]
name = "smoke"
path = "test/smoke.rs"
